Changes to try and fix memory leaks